force-app/main/default/objects/Time_Tracker__c/Time_Tracker__c.object-meta.xml
<CustomObject>
    <label>Time Tracker</label>
    <nameField>
        <label>Time Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Tracker</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>