force-app/main/default/objects/Time_Tracker__c/fields/Ending_Time__c.field-meta.xml
<CustomField>
    <fullName>Ending_Time__c</fullName>
    <label>Ending Time</label>
    <type>DateTime</type>
</CustomField>