force-app/main/default/objects/Time_Tracker__c/fields/net_days__c.field-meta.xml
<CustomField>
    <fullName>net_days__c</fullName>
    <formula>Ending_Time__c - Starting_Time__c</formula>
    <label>net days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>