force-app/main/default/objects/Time_Tracker__c/fields/Net_Time__c.field-meta.xml
<CustomField>
    <fullName>Net_Time__c</fullName>
    <formula>( Ending_Time__c - Starting_Time__c )*24</formula>
    <label>Net Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>