force-app/main/default/objects/Time_Tracker__c/fields/Other_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Other_Compensation__c</fullName>
    <label>Other Compensation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>