force-app/main/default/objects/Time_Tracker__c/fields/Starting_Time__c.field-meta.xml
<CustomField>
    <fullName>Starting_Time__c</fullName>
    <label>Starting Time</label>
    <type>DateTime</type>
</CustomField>