force-app/main/default/objects/Time_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Starting_Time__c</columns>
    <columns>Ending_Time__c</columns>
    <columns>Net_Time__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Starting_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/11/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>